--- a/templates/index.html
+++ b/templates/index.html
@@ -78,36 +78,28 @@
       box-shadow: 0 0 15px rgba(255,0,0,0.3);
     }
 
-   h4 {
-  font-size: 26px;
-  font-weight: 900;
-  color: #ff1a1a;
-  text-shadow: 0 0 10px red;
-}
+    h4 {
+      font-size: 26px;
+      font-weight: 900;
+      color: #ff1a1a;
+      text-shadow: 0 0 10px red;
+    }
 
-.form-control, .form-select {
-  background: #111;
-  border: 1px solid #444;
-  color: white;
-}
+    .form-control, .form-select {
+      background: #111; border: 1px solid #444; color:white;
+    }
 
-.form-control::placeholder {
-  color: rgba(255,255,255,0.7);
-}
-
-.form-control:focus, .form-select:focus {
-  border-color: #ff1a1a;
-  box-shadow: 0 0 10px red;
-}
-    input[type="datetime-local"] {
+    .form-control:focus, .form-select:focus {
+      border-color: #ff1a1a; box-shadow: 0 0 10px red;
+    }
+    .white-datetime {
   background: white !important;
   color: black !important;
 }
 
-input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+.white-datetime::-webkit-calendar-picker-indicator {
   filter: invert(0);
 }
-
 
 
     table thead th { background:#151515; color:#ff1a1a; }
