--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>FR CONSOLE</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
 
   <style>
     body { background-color: #000; font-family: 'Segoe UI', sans-serif; color:white; }
@@ -285,10 +288,12 @@ function showSection(id, e) {
   if (e) e.target.classList.add('active');
   if (id === 'show') refreshUsers();
 }
-const expiryInput = document.getElementById("add_expiry");
 
-expiryInput.addEventListener("change", () => {
-  expiryInput.blur();   // ✅ picker close
+flatpickr("#add_expiry", {
+    enableTime: true,
+    dateFormat: "Y-m-d H:i",
+    time_24hr: true,
+    allowInput: false
 });
 
 function showToast(msg) {
