--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,7 @@
   <a href="#" onclick="showSection('reset', event)">🔄 Reset HWID</a>
   <a href="#" onclick="showSection('sendmsg', event)">✉️ Send Message</a>
   <a href="#" onclick="showSection('project', event)">📁 Project Name</a>
+  <a href="/logout">🚪 Logout</a>
 </div>
 
 <div class="main">
