--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,18 @@
     body { background-color: #000; font-family: 'Segoe UI', sans-serif; color:white; }
 
     .sidebar {
-      width: 240px; height: 100vh; position: fixed;
-      background-color: #000; padding: 20px 0;
-      border-right: 1px solid #222;
-      box-shadow: 3px 0 20px rgba(255,0,0,0.2);
-    }
+  width: 240px;
+  height: 100vh;
+  position: fixed;
+  background-color: #000;
+  padding: 20px 0;
+  border-right: 1px solid #222;
+  box-shadow: 3px 0 20px rgba(255,0,0,0.2);
+
+  display: flex;
+  flex-direction: column;
+}
+
 
     .sidebar h5 {
       text-align: center;
@@ -134,7 +141,7 @@
   <a href="#" onclick="showSection('reset', event)">🔄 Reset HWID</a>
   <a href="#" onclick="showSection('sendmsg', event)">✉️ Send Message</a>
   <a href="#" onclick="showSection('project', event)">📁 Project Name</a>
-  <a href="/logout">🚪 Logout</a>
+  <a href="/logout" style="margin-top:auto;">🚪 Logout</a>
 </div>
 
 <div class="main">
