--- a/templates/index.html
+++ b/templates/index.html
@@ -221,7 +221,7 @@
     <h4>🔄 Reset HWID</h4>
     <form onsubmit="resetHWID(event)">
       <input required type="text" class="form-control mb-2" placeholder="Username" id="reset_username">
-      <button class="btn btn-dark">Reset HWID</button>
+      <button class="btn btn-danger">Reset HWID</button>
     </form>
   </div>
 
