--- a/templates/index.html
+++ b/templates/index.html
@@ -279,8 +279,14 @@ else
     <button class="btn btn-light btn-sm position-absolute top-0 end-0 m-2" onclick="copyCode()">📋</button>
   </div>
   <p class="developer">Developer: SHUBH</p>
-  <a href="/static/FRCONSOLE.cs" download class="btn btn-success btn-sm">⬇ Download FRCONSOLE.cs</a>
-</div>
+ <a href="/static/FRCONSOLE.cs" download class="btn btn-success btn-sm me-2">
+  ⬇ Download FRCONSOLE.cs
+</a>
+
+<a href="/static/MAIN.txt" download class="btn btn-primary btn-sm">
+  ⬇ Download MAIN.txt
+</a>
+
 
 </div>
 
