--- a/templates/index.html
+++ b/templates/index.html
@@ -258,7 +258,7 @@
     ⬇ Download MAIN.txt
   </a>
 
-  <a href="/static/login_code.txt" download class="btn btn-danger btn-sm">
+  <a href="/static/LOGIN.txt" download class="btn btn-danger btn-sm">
     ⬇ Download LOGIN.txt
   </a>
 
