--- a/templates/index.html
+++ b/templates/index.html
@@ -246,21 +246,11 @@
 
 <!-- Project Name -->
 <div id="project" class="section">
-  <h4>📁 Project Name</h4>
+  <h4>📁 Project Status</h4>
 
-  <p class="developer">Developer: SHUBH</p>
+ 
 
-  <a href="/static/FRCONSOLE.cs" download class="btn btn-danger btn-sm me-2">
-    ⬇ Download FRCONSOLE.cs
-  </a>
-
-  <a href="/static/MAIN.txt" download class="btn btn-danger btn-sm me-2">
-    ⬇ Download MAIN.txt
-  </a>
-
- <a href="/static/LOGIN.txt" download class="btn btn-danger btn-sm">
-  ⬇ Download LOGIN.txt
-</a>
+ 
 
 <!-- STATUS PANEL -->
 <div class="mt-4 p-3 rounded" style="
@@ -301,7 +291,18 @@
 ">
   Developed By <span style="color:#ff1a1a;">SHUBH</span> • Private Build
 </div>
+ <a href="/static/FRCONSOLE.cs" download class="btn btn-danger btn-sm me-2">
+    ⬇ Download FRCONSOLE.cs
+  </a>
 
+  <a href="/static/MAIN.txt" download class="btn btn-danger btn-sm me-2">
+    ⬇ Download MAIN.txt
+  </a>
+
+ <a href="/static/LOGIN.txt" download class="btn btn-danger btn-sm">
+  ⬇ Download LOGIN.txt
+</a>
+   <p class="developer">Developer: SHUBH</p>
 </div>   <!-- ✅ ab band karo -->
 
 <div id="toast" class="toast" style="display:none;"></div>
