--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
   <a href="#" onclick="showSection('show', event)">📋 Show Users</a>
   <a href="#" onclick="showSection('reset', event)">🔄 Reset HWID</a>
   <a href="#" onclick="showSection('sendmsg', event)">✉️ Send Message</a>
-  <a href="#" onclick="showSection('project', event)">📁 Project Name</a>
+  <a href="#" onclick="showSection('project', event)">📁 Project</a>
   <a href="/logout" style="margin-top:auto;">🚪 Logout</a>
 </div>
 
