--- a/templates/index.html
+++ b/templates/index.html
@@ -239,7 +239,7 @@
   <form onsubmit="loadUserMessages(event)" class="mb-3">
     <div class="input-group">
       <input required type="text" class="form-control" placeholder="Enter Username" id="message_username">
-      <button class="btn btn-secondary">🔄 Load</button>
+      <button class="btn btn-secondary">🔄 Show</button>
     </div>
   </form>
 
