--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
       <option value="INTERNAL">INTERNAL</option>
       <option value="SOUTH">SOUTH</option>
       <option value="SILENTAIM">SOUTHAIM</option>
-       <option value="PUSSY">HARSH</option>
+       <option value="HARSH">HARSH</option>
       <option value="SOUTHV2">SOUTHV2</option>
     </select>
   </div>
