--- a/templates/index.html
+++ b/templates/index.html
@@ -302,17 +302,17 @@
 <!-- SPACE + BUTTON ROW -->
 <div class="mt-3 text-center">
 
-  <a href="/view/FRCONSOLE.cs" class="btn btn-danger btn-sm me-2">
-    📄 FRCONSOLE.cs
-  </a>
+<a href="#" onclick="protectedOpen('/view/FRCONSOLE.cs')" class="btn btn-danger btn-sm me-2">
+  📄 FRCONSOLE.cs
+</a>
 
-  <a href="/view/MAIN.txt" class="btn btn-danger btn-sm me-2">
-    📄 MAIN.txt
-  </a>
+<a href="#" onclick="protectedOpen('/view/MAIN.txt')" class="btn btn-danger btn-sm me-2">
+  📄 MAIN.txt
+</a>
 
-  <a href="/view/LOGIN.txt" class="btn btn-danger btn-sm">
-    📄 LOGIN.txt
-  </a>
+<a href="#" onclick="protectedOpen('/view/LOGIN.txt')" class="btn btn-danger btn-sm">
+  📄 LOGIN.txt
+</a>
 
 </div>
 
@@ -346,7 +346,15 @@ async function copyFile(url) {
         showToast("Copy failed");
     }
 }
+function protectedOpen(url) {
+    const pass = prompt("Enter password");
 
+    if (pass === "0512") {          // ← yaha apna password
+        window.location.href = url;
+    } else {
+        showToast("Wrong password");
+    }
+}
 
 
 function showToast(msg) {
