--- a/templates/index.html
+++ b/templates/index.html
@@ -157,12 +157,9 @@
     <label class="form-label">SELECT APPLICATION</label>
     <select class="form-select" id="appSelect" onchange="refreshUsers()">
       <option value="FRCONSOLE">FRCONSOLE</option>
-      <option value="SILENTAIM">SILENTAIM</option>
-      <option value="INTERNAL">INTERNAL</option>
-      <option value="SOUTH">SOUTH</option>
-      <option value="SILENTAIM">SOUTHAIM</option>
        <option value="HARSH">HARSH</option>
-      <option value="SOUTHV2">SOUTHV2</option>
+      <option value="SILENTAIM">SOUTHAIM</option>
+      <option value="SOUTH">SOUTHV2</option>
     </select>
   </div>
   <!-- Add User -->
