--- a/templates/login.html
+++ b/templates/login.html
@@ -137,6 +137,7 @@ body {
 .flipper {
   position: relative;
   width: 420px;
+  min-height: 520px;   /* ADD THIS */
   transition: 0.8s;
   transform-style: preserve-3d;
 }
@@ -149,6 +150,8 @@ body {
   backface-visibility: hidden;
   position: absolute;
   width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .back {
